<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>testpkg</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="1287811578@qq.com">gyk</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>

  <!-- msg/srv 1.编译依赖 -->
  <build_depend>rosidl_default_generators</build_depend>
  <!-- msg/srv 2.执行依赖 -->
  <exec_depend>rosidl_default_runtime</exec_depend>
  <!-- msg/srv 3.声明当前包所属的功能包组 -->
  <member_of_group>rosidl_interface_packages</member_of_group>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>