<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tutorails_plumbing</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="1287811578@qq.com">gyk</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>base_interfaces_demo</build_depend>
  <build_depend>cpp01_topic</build_depend>
  <build_depend>cpp02_service</build_depend>
  <build_depend>cpp03_actiob</build_depend>
  <build_depend>cpp04_param</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>